@@ -62,6 +62,7 @@ public class Stat  extends Skills
 	public static final int	ABLETYPE_CHARSTATS		= -13;
 	public static final int	ABLETYPE_LEVELTIMES		= -14;
 	public static final int	ABLETYPE_AFFECTS		= -15;
+	public static final int	ABLETYPE_OBJECTS		= -16;
 
 	public static final String[][] ABLETYPE_DESCS={
 		{"EQUIPMENT","EQ","EQUIP"},
@@ -78,6 +79,7 @@ public class Stat  extends Skills
 		{"CHARSTATISTICS","CSTAT","CHARSTATS"},
 		{"LEVELTIMES","LVLS"},
 		{"AFFECTS","EFFECTS","EFF"},
+		{"POBJECTS"},
 	};
 
 	public MOB getTarget(final MOB mob, final String targetName, final boolean quiet)
@@ -1028,6 +1030,20 @@ public class Stat  extends Skills
 					str.append(" "+e.nextElement().getTattooName()+",");
 				str.deleteCharAt(str.length()-1);
 				str.append("\n\r");
+			}
+			else
+			if(ableTypes==ABLETYPE_OBJECTS)
+			{
+				str.append(L("Player Objects:\n\r  "));
+				final PlayerStats pstats = target.playerStats();
+				if(pstats != null)
+				{
+					for(final Enumeration<Item> e=pstats.getExtItems().items();e.hasMoreElements();)
+						str.append(" "+e.nextElement().name(mob)+", ");
+					str.deleteCharAt(str.length()-1);
+					str.deleteCharAt(str.length()-1);
+					str.append("\n\r");
+				}
 			}
 			else
 			if(ableTypes==ABLETYPE_AFFECTS)
