@@ -1666,7 +1666,7 @@ SPELL, PRAYER, SONG, TRAP, PROPERTY, "THIEF SKILL", LANGUAGE, CHANT, \
 "COMMON SKILL", DISEASE, POISON.  You can also get special reports by \
 entering one of the following before the name: EQUIPMENT, COMBAT, INVENTORY, STINK, DEITY, \
 QUESTWINS, TATTOOS, TITLES, SCRIPTS, WORLDEXPLORED, AREASEXPLORED, ROOMSEXPLORED, ALIGNMENT, INCLINATION, \
-FACTIONS, FACTIONID, FACTIONAMT, MATTRIB, OBJATTRIB, CLAN, CLANROLE, LEVELTIMES, and CHARSTATS.  \
+FACTIONS, FACTIONID, FACTIONAMT, MATTRIB, OBJATTRIB, CLAN, CLANROLE, LEVELTIMES, POBJECTS, and CHARSTATS.  \
 As per the player version of this command, you can also use \
 basic stats, such as: HITS, MANA, MOVE, HUNGER, THIRST, FATIGUE, MAXHITS, MAXMANA, MAXMOVE, \
 MAXHUNGER, MAXTHIRST, MAXFATIGUE, STRENGTH, INTELLIGENCE, DEXTERITY, \
